Added Jenkins File

--- a/RunCollectionMultipleTimesUsingFiles/Dockerfile
+++ b/RunCollectionMultipleTimesUsingFiles/Dockerfile
@@ -2,9 +2,15 @@ FROM node:22.19.0
 
 WORKDIR /app
 
+# Install Newman + reporters
 RUN npm install -g newman newman-reporter-html newman-reporter-htmlextra
 
+# Create results folder
+RUN mkdir -p /app/results
+
+# Copy your collection + data file
 COPY RunTestsMultipleTimesUsingFilesCol.json .
 COPY csvfile.csv .
 
-CMD ["newman", "run", "RunTestsMultipleTimesUsingFilesCol.json", "-d", "csvfile.csv", "-r", "cli,html,htmlextra"]
+# Run Newman and always export report to /app/results/datadriventest.html
+CMD ["newman", "run", "RunTestsMultipleTimesUsingFilesCol.json", "-d", "csvfile.csv", "-r", "cli,html,htmlextra", "--reporter-htmlextra-export", "/app/results/datadriventest.html"]
